--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>VUE</title>
   </head>
-  <body>
+  <body style="background-color: #DDD;">
     <noscript>
       <strong
         >We're sorry but codesandbox doesn't work properly without JavaScript
